[build]
target = "wasm32-unknown-unknown"

[package]
name = "webengine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "25.0", features = ["webgl"] }
winit = "0.30"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version="0.3", features = ["Window","Document","Element","HtmlElement","Node","HtmlCanvasElement","Performance","AudioContext","AudioBuffer","AudioContextState","AudioBufferSourceNode","AudioDestinationNode","AudioBufferSourceOptions","AudioParam"] }
glam = "0.30.4"
glyphon = "0.9.0"
